Tue Aug  4 17:09:00 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/rules.lib.GNU:
        * include/makeinclude/rules.local.GNU:
        * include/makeinclude/wrapper_macros.GNU:

          Removed the remnants of the 'split' macro.  This fixes Bug 1181.

Tue Aug  4 14:32:24 UTC 2009  Steve Huston  <shuston@riverace.com>

        * ace/Configuration.h:
        * ace/Configuration.cpp (ACE_Configuration_Heap::open): Make multiple
          open() calls an error (return -1, EBUSY) rather than leaking
          an allocator and whatever it had allocated.
          Fixes Bugzilla 1324.

        * tests/Config_Test.cpp: Add test case for multiple open() calls.

        * NEWS: Noted the behavior change on open().

Tue Aug  4 13:09:25 UTC 2009  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Log_Msg.cpp: Added support for the %.1M format.  Thanks to
          Alon Diamant <diamant at alon at gmail dot com> for contributing
          this.  This fixes bugid 3716.
  
        * tests/Log_Msg.cpp: Added a test for the %.1M format.  Thanks to
          Alon Diamant <diamant at alon at gmail dot com> for contributing
          this.

Tue Aug  4 12:07:09 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/mpc.pl:
        * bin/mwc.pl:

          Use the new MPC Driver constant to determine which type of input
          will be dealt with (workspaces or projects).

Tue Aug  4 12:06:28 UTC 2009  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Modified the prebuild and postbuild rules to obey the 'requires'
          and 'avoids' MPC settings since the gnuace projects have the
          additional requirement of gnu make macros that match the
          requirements and avoids settings.

Mon Aug  3 20:08:22 UTC 2009  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Compiler_Features_06_Test.cpp:
          I think I have fixed the compilation problem on OpenVMS, using